--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,62 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("background2.jpg");
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  border: 8px #4981b8 solid;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+h1 {
+  margin: 0;
+}
+
+p {
+  margin: 10px 0;
+}
+
+.main-number {
+  font-size: 2em;
+}
+
+button {
+  border: 1px #4981b8 solid;
+  margin: 0 2px;
+  background: white;
+  font-weight: 600;
+  font-size: 1.1em;
+}
+
+.switch-cont {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.switch-cont p {
+  padding: 0 15px;
+  font-weight: 700;
+}
+
+.team-scores span {
+  font-size: 1.5em;
+}
+
+.team-scores span:first-child {
+  padding-right: 25px;
 }
